# GameOfLife

./: CMakeLists.txt  README.md  layouts.json  main.cpp
qt/: CMakeLists.txt  main.cpp
